pq->heapq, addded memoization for efficiency

--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "sCCwbjuwvWZd"
       },
@@ -14,31 +14,32 @@
         "from collections import namedtuple\n",
         "from queue import PriorityQueue\n",
         "\n",
-        "from tqdm import tqdm\n"
+        "from tqdm import tqdm\n",
+        "\n",
+        "import heapq\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "JmChNxP7AN8B"
-      },
+      "metadata": {},
       "source": [
         "# Problem Definition:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "HrD3qip0vWZg"
       },
       "outputs": [],
       "source": [
         "# constants\n",
-        "PROBLEM_SIZE = 20  # dimension of the finite set U to cover\n",
-        "NUMBER_SET = 40  # number of randomized subsets to chose from\n",
+        "PROBLEM_SIZE = 10  # dimension of the finite set U to cover\n",
+        "NUMBER_SET = 20  # number of randomized subsets to chose from\n",
+        "PROBABILITY_TRUE = 0.3  # probability of a subset to contain an element\n",
         "SETS = tuple(\n",
-        "    np.array([random() < 0.3 for i in range(PROBLEM_SIZE)]) for j in range(NUMBER_SET)\n",
+        "    np.array([random() < PROBABILITY_TRUE for i in range(PROBLEM_SIZE)]) for j in range(NUMBER_SET)\n",
         ")  # generate radnomized sets\n",
         "\n",
         "# Define State as a named tuple\n",
@@ -47,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "4MiWodfNvWZh"
       },
@@ -70,16 +71,14 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Z_iIYNQRAN8D"
-      },
+      "metadata": {},
       "source": [
         "# Cost and Heuristic Functions:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "rkXFnwICvWZj"
       },
@@ -92,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "GnsoumyPvWZm"
       },
@@ -216,16 +215,14 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "vmPlRWgKAN8E"
-      },
+      "metadata": {},
       "source": [
         "# A*"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "_34iHwB3vWZo"
       },
@@ -236,19 +233,24 @@
         "    initial_state = State(\n",
         "        taken=[],\n",
         "        cost=0,\n",
-        "        heuristic=heuristic(State(taken=[], cost=0, heuristic=0), sets),\n",
+        "        heuristic=0,\n",
         "    )\n",
-        "    open_set = PriorityQueue()\n",
-        "    open_set.put((initial_state.cost + initial_state.heuristic, initial_state))\n",
+        "\n",
+        "    memoization = {}\n",
+        "\n",
+        "    open_set = []\n",
+        "    heapq.heappush(\n",
+        "        open_set, (initial_state.cost + initial_state.heuristic, initial_state)\n",
+        "    )\n",
         "\n",
         "    # Initialize the closed set as an empty set\n",
         "    closed_set = set()\n",
         "\n",
         "    progress_bar = tqdm(total=None)\n",
         "\n",
-        "    while not open_set.empty():\n",
+        "    while not len(open_set) == 0:\n",
         "        # Get the state with the lowest f score from the priority queue\n",
-        "        _, current_state = open_set.get()\n",
+        "        _, current_state = heapq.heappop(open_set)\n",
         "\n",
         "        progress_bar.update(1)\n",
         "\n",
@@ -265,13 +267,24 @@
         "            if subset not in current_state.taken:\n",
         "                # Create a new state by adding the subset\n",
         "                new_taken = current_state.taken + [subset]\n",
+        "\n",
+        "                # Check if the heuristic value is already in the memoization dictionary\n",
+        "                if tuple(new_taken) in memoization:\n",
+        "                    new_heuristic = memoization[tuple(new_taken)]\n",
+        "                else:\n",
+        "                    # Calculate the heuristic value\n",
+        "                    new_heuristic = heuristic(State(new_taken, 0, 0), sets)\n",
+        "                    # Store it in the memoization dictionary\n",
+        "                    memoization[tuple(new_taken)] = new_heuristic\n",
+        "\n",
         "                new_cost = cost(State(new_taken, 0, 0))\n",
-        "                new_heuristic = heuristic(State(new_taken, 0, 0), sets)\n",
         "                new_state = State(new_taken, new_cost, new_heuristic)\n",
         "\n",
         "                # If the state is not in the closed set, add it to the open set\n",
         "                if tuple(new_taken) not in closed_set:\n",
-        "                    open_set.put((new_state.cost + new_state.heuristic, new_state))\n",
+        "                    heapq.heappush(\n",
+        "                        open_set, (new_state.cost + new_state.heuristic, new_state)\n",
+        "                    )\n",
         "\n",
         "    # If the open set is empty and no solution is found, return None\n",
         "    progress_bar.close()\n",
@@ -280,152 +293,22 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Nl9ahq18AN8G"
-      },
+      "metadata": {},
       "source": [
         "# Results:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LwP1SGP3vWZo",
-        "outputId": "8f308c01-09eb-48a5-9519-504c3bfbb039"
+        "outputId": "eaa8822e-5f80-4212-da9a-3bf53bc3b9d0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Problem size: 20 Number of sets: 40 \n",
-            "\n",
-            "TRIVIAL_heuristic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "63980it [00:21, 2985.56it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Solution: [0, 3, 9, 30]\n",
-            " Solution check: True\n",
-            "\n",
-            "MRSC_heuristic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "60882it [00:56, 1079.29it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Solution: [0, 3, 9, 30]\n",
-            " Solution check: True\n",
-            "\n",
-            "MSC_heuristic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "31255it [00:28, 1096.85it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Solution: [0, 3, 9, 30]\n",
-            " Solution check: True\n",
-            "\n",
-            "MRSC_MSC_heuristic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "55890it [01:21, 685.21it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Solution: [0, 3, 9, 30]\n",
-            " Solution check: True\n",
-            "\n",
-            "ASC_heuristic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "3852it [00:37, 102.87it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Solution: [9, 13, 20, 28]\n",
-            " Solution check: True\n",
-            "\n",
-            "DENSITY_heuristic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "5it [00:00, 926.06it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Solution: [13, 20, 9, 0]\n",
-            " Solution check: True\n",
-            "\n",
-            "RANDOM_heuristic\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "62341it [00:24, 2549.58it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Solution: [1, 16, 11, 30]\n",
-            " Solution check: True\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "heuristics = [\n",
         "    TRIVIAL_heuristic,\n",
@@ -441,9 +324,8 @@
         "    print(i.__name__)\n",
         "    solution = astar(SETS, i)\n",
         "    print(\" Solution:\", solution.taken)\n",
-        "    if PROBLEM_SIZE <= 10:\n",
-        "        for i in solution.taken:\n",
-        "            print(\" Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
+        "    # for i in solution.taken:\n",
+        "    #     print(\" Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
         "    print(\" Solution check:\", goal_check(solution, SETS))\n",
         "    print()\n"
       ]
