--- a/lab1_set_covering_a_start/lab1.ipynb
+++ b/lab1_set_covering_a_start/lab1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "sCCwbjuwvWZd"
       },
@@ -28,15 +28,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "HrD3qip0vWZg"
       },
       "outputs": [],
       "source": [
         "# constants\n",
-        "PROBLEM_SIZE = 10  # dimension of the finite set U to cover\n",
-        "NUMBER_SET = 20  # number of randomized subsets to chose from\n",
+        "PROBLEM_SIZE = 20  # dimension of the finite set U to cover\n",
+        "NUMBER_SET = 40  # number of randomized subsets to chose from\n",
         "PROBABILITY_TRUE = 0.3  # probability of a subset to contain an element\n",
         "SETS = tuple(\n",
         "    np.array([random() < PROBABILITY_TRUE for i in range(PROBLEM_SIZE)]) for j in range(NUMBER_SET)\n",
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "4MiWodfNvWZh"
       },
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "rkXFnwICvWZj"
       },
@@ -86,34 +86,23 @@
       "source": [
         "def cost(state):\n",
         "    \"\"\"the cost is the number of sets taken by the solution\"\"\"\n",
-        "    return len(state.taken)"
+        "    return len(state.taken)\n",
+        "\n",
+        "\n",
+        "def cost_number_of_spots(state):\n",
+        "    \"\"\"The cost is the sum of the number of spots taken by each set in the solution.\"\"\"\n",
+        "    selected_sets = [SETS[i] for i in state.taken]\n",
+        "    return np.sum([np.sum(s) for s in selected_sets])\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "GnsoumyPvWZm"
       },
       "outputs": [],
       "source": [
-        "#\n",
-        "# state = namedtuple(\"State\", [\"taken\", \"cost\", \"heuristic\"])\n",
-        "#\n",
-        "# SETS example =\n",
-        "#   Set 0 [False  True  True  True False] Coverage: 3\n",
-        "#   Set 1 [False  True False False False] Coverage: 1\n",
-        "#   Set 2 [ True  True False False False] Coverage: 2\n",
-        "#   Set 3 [ True False False False  True] Coverage: 2\n",
-        "#   Set 4 [False  True  True  True False] Coverage: 3\n",
-        "#   Set 5 [ True False False False False] Coverage: 1\n",
-        "#   Set 6 [False False False False False] Coverage: 0\n",
-        "#   Set 7 [False False False False  True] Coverage: 1\n",
-        "#   Set 8 [False False False False False] Coverage: 0\n",
-        "#   Set 9 [False  True False False False] Coverage: 1\n",
-        "#\n",
-        "\n",
-        "\n",
         "def TRIVIAL_heuristic(state, sets):\n",
         "    return 0\n",
         "\n",
@@ -127,7 +116,7 @@
         "    assumes that the subsets have an equal chance of covering remaining uncovered\n",
         "    elements.\n",
         "\n",
-        "    h(state) = (number of uncovered elements in \"U\") / (number of subsets not taken)\n",
+        "    h(state) = (number of uncovered elements in U) / (number of subsets not taken)\n",
         "    \"\"\"\n",
         "\n",
         "    uncovered = reduce(\n",
@@ -147,7 +136,7 @@
         "    will cover as many uncovered elements as possible. It divides the number of\n",
         "    uncovered elements in \"U\" by the number of subsets already taken.\n",
         "\n",
-        "    h(state) = (number of uncovered elements in \"U\") / (number of subsets already taken)\n",
+        "    h(state) = (number of uncovered elements in U) / (number of subsets already taken)\n",
         "    \"\"\"\n",
         "\n",
         "    uncovered = reduce(\n",
@@ -169,7 +158,7 @@
         "    subsets and assumes that each chosen subset will, on average, cover this many\n",
         "    elements.\n",
         "\n",
-        "    h(state) = (number of uncovered elements in \"U\") / (average size of remaining subsets)\n",
+        "    h(state) = (number of uncovered elements in U) / (average size of remaining subsets)\n",
         "    \"\"\"\n",
         "\n",
         "    uncovered = reduce(\n",
@@ -195,22 +184,21 @@
         "    Density Heuristic\n",
         "\n",
         "    This heuristic estimates the cost based on the density of uncovered elements in\n",
-        "    \"U\". It assumes that the subsets have an equal chance of covering remaining\n",
+        "    U. It assumes that the subsets have an equal chance of covering remaining\n",
         "    uncovered elements.\n",
         "\n",
-        "    h(state) = (density of uncovered elements in \"U\") * (number of subsets)\n",
+        "    h(state) = (density of uncovered elements in U) * (number of subsets)\n",
         "    \"\"\"\n",
         "\n",
         "    uncovered = reduce(\n",
         "        np.logical_or, [sets[i] for i in state.taken], np.zeros(len(sets[0]))\n",
         "    )\n",
         "\n",
-        "    # Calculate the density of uncovered elements in \"U\"\n",
+        "    # Calculate the density of uncovered elements in U\n",
         "    uncovered_density = np.sum(uncovered) / len(uncovered)\n",
         "\n",
         "    # Estimate the remaining cost based on the uncovered density\n",
-        "    return -uncovered_density * NUMBER_SET\n",
-        "\n"
+        "    return -uncovered_density * NUMBER_SET\n"
       ]
     },
     {
@@ -222,13 +210,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "_34iHwB3vWZo"
       },
       "outputs": [],
       "source": [
-        "def astar(sets, heuristic):\n",
+        "def astar(sets, heuristic,cost_f):\n",
         "    # Initialize the priority queue with the initial state\n",
         "    initial_state = State(\n",
         "        taken=[],\n",
@@ -277,7 +265,7 @@
         "                    # Store it in the memoization dictionary\n",
         "                    memoization[tuple(new_taken)] = new_heuristic\n",
         "\n",
-        "                new_cost = cost(State(new_taken, 0, 0))\n",
+        "                new_cost = cost_f(State(new_taken, 0, 0))\n",
         "                new_state = State(new_taken, new_cost, new_heuristic)\n",
         "\n",
         "                # If the state is not in the closed set, add it to the open set\n",
@@ -300,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -308,7 +296,156 @@
         "id": "LwP1SGP3vWZo",
         "outputId": "eaa8822e-5f80-4212-da9a-3bf53bc3b9d0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Problem size: 20 Number of sets: 40 \n",
+            "\n",
+            "TRIVIAL_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "476it [00:00, 2138.69it/s]"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "3613it [00:01, 2099.28it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [1, 14, 37]\n",
+            " Solution cost: 3\n",
+            " Solution check: True\n",
+            "\n",
+            "MRSC_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "1602it [00:01, 1069.61it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [1, 14, 37]\n",
+            " Solution cost: 3\n",
+            " Solution check: True\n",
+            "\n",
+            "MSC_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "328it [00:00, 1024.68it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [1, 14, 37]\n",
+            " Solution cost: 3\n",
+            " Solution check: True\n",
+            "\n",
+            "MRSC_MSC_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "902it [00:01, 797.65it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [1, 14, 37]\n",
+            " Solution cost: 3\n",
+            " Solution check: True\n",
+            "\n",
+            "ASC_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "18it [00:00, 117.11it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [14, 1, 37]\n",
+            " Solution cost: 3\n",
+            " Solution check: True\n",
+            "\n",
+            "DENSITY_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "5it [00:00, 706.61it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [12, 14, 1, 0]\n",
+            " Solution cost: 4\n",
+            " Solution check: True\n",
+            "\n",
+            "RANDOM_heuristic\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "5169it [00:02, 2530.52it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Solution: [14, 33, 37]\n",
+            " Solution cost: 3\n",
+            " Solution check: True\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "heuristics = [\n",
         "    TRIVIAL_heuristic,\n",
@@ -319,13 +456,15 @@
         "    DENSITY_heuristic,\n",
         "    RANDOM_heuristic,\n",
         "]\n",
+        "\n",
         "print(\"Problem size:\", PROBLEM_SIZE, \"Number of sets:\", NUMBER_SET, \"\\n\")\n",
-        "for i in heuristics:\n",
-        "    print(i.__name__)\n",
-        "    solution = astar(SETS, i)\n",
+        "\n",
+        "for h in heuristics:\n",
+        "    print(h.__name__)\n",
+        "    solution = astar(SETS, h, cost)\n",
+        "    # solution = astar(SETS,h,cost_number_of_spots) # slow af\n",
         "    print(\" Solution:\", solution.taken)\n",
-        "    # for i in solution.taken:\n",
-        "    #     print(\" Set\", i, SETS[i], \"Coverage:\", np.sum(SETS[i]))\n",
+        "    print(\" Solution cost:\", solution.cost)\n",
         "    print(\" Solution check:\", goal_check(solution, SETS))\n",
         "    print()\n"
       ]
