set coveing - hill climbing & sim annealing

--- a/set_covering_ss/sc_ss.ipynb
+++ b/set_covering_ss/sc_ss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1832,
+   "execution_count": 2093,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,10 +10,11 @@
     "from random import random\n",
     "from functools import reduce\n",
     "from collections import namedtuple\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# constants\n",
-    "PROBLEM_SIZE = 1000  # dimension of the finite set U\n",
-    "NUMBER_SET = 2000  # number of subsets in the collection S\n",
+    "PROBLEM_SIZE = 500  # dimension of the finite set U\n",
+    "NUMBER_SET = 1000  # number of subsets in the collection S\n",
     "SETS = tuple(\n",
     "    np.array([random() < 0.3 for i in range(PROBLEM_SIZE)]) for j in range(NUMBER_SET)\n",
     ")  # generate sets in S\n",
@@ -31,24 +32,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Single State\n",
-    "\n",
-    "```\n",
-    "Hill-Climbing(problem)\n",
-    "    current <- Make-Node(Initial-State[problem])\n",
-    "    loop do\n",
-    "        neighbor <- a highest-valued successor of current\n",
-    "        if Value[neighbor] <= Value[current] then return State[current]\n",
-    "        current <- neighbor\n",
-    "```\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1833,
+   "execution_count": 2094,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1834,
+   "execution_count": 2095,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,17 +80,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HILL CLIMBING\n",
+    "\n",
+    "```\n",
+    "Hill-Climbing(problem)\n",
+    "    current <- Make-Node(Initial-State[problem])\n",
+    "    loop do\n",
+    "        neighbor <- a highest-valued successor of current\n",
+    "        if Value[neighbor] <= Value[current] then return State[current]\n",
+    "        current <- neighbor\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1835,
+   "execution_count": 2096,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hill_climbing(init_state):\n",
     "    current = init_state\n",
+    "    pb = tqdm()\n",
     "    while True:\n",
     "        neighbors = successor(current)\n",
     "        next = max(neighbors, key=lambda state: state.heuristic)\n",
     "\n",
+    "        pb.update(1)\n",
     "        if (\n",
     "            goal_check(current)\n",
     "            or next.heuristic < current.heuristic\n",
@@ -117,17 +120,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SIMULATED ANNELAING\n",
+    "\n",
+    "```\n",
+    "Simulated-Annealing(problem, schedule) returns a solution state\n",
+    "    current <- Make-Node(Initial-State[problem])\n",
+    "    while True\n",
+    "        next <- a randomly selected successor of current\n",
+    "        ΔE <- Value[next] - Value[current]\n",
+    "        if ΔE > 0 then current <- next\n",
+    "        else current <- next only with probability e^(ΔE/T)\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1836,
+   "execution_count": 2097,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulated_annealing(init_state):\n",
+    "    TEMP = 20\n",
+    "\n",
+    "    current = init_state\n",
+    "    pb = tqdm()\n",
+    "    while True:\n",
+    "        pb.update(1)\n",
+    "        if goal_check(current) or len(current.taken) == NUMBER_SET:\n",
+    "            return current\n",
+    "\n",
+    "        neighbors = successor(current)\n",
+    "        next = neighbors[np.random.randint(len(neighbors))]\n",
+    "\n",
+    "        deltaE = next.heuristic - current.heuristic\n",
+    "\n",
+    "        if deltaE > 0:\n",
+    "            current = next\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RUNS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2098,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:00, 32.30it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found   : State(taken=[967, 1070, 579, 110, 132, 487, 408, 1836, 1008], cost=9, heuristic=1000)\n",
+      "Found   : State(taken=[177, 810, 477, 442, 615, 142, 95, 185, 0], cost=9, heuristic=500)\n",
       "Is sol  : True\n",
-      "Overlap : 862\n"
+      "Overlap : 439\n"
      ]
     }
    ],
@@ -140,7 +204,44 @@
     "\n",
     "print(\"Found   :\", res)\n",
     "print(\"Is sol  :\", goal_check(res))\n",
+    "print(\"Overlap :\", overlap(res.taken))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2099,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23it [00:00, 36.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found   : State(taken=[223, 53, 303, 384, 867, 167, 88, 753, 239, 944, 764, 192, 435, 128, 570, 78], cost=16, heuristic=500)\n",
+      "Is sol  : True\n",
+      "Overlap : 488\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run sim annealing\n",
+    "res = simulated_annealing(INITIAL_STATE)\n",
     "\n",
+    "print(\"Found   :\", res)\n",
+    "print(\"Is sol  :\", goal_check(res))\n",
     "print(\"Overlap :\", overlap(res.taken))\n"
    ]
   }
