--- a/halloween/Halloween.ipynb
+++ b/halloween/Halloween.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3ffe7245-e849-41d0-9698-5f0e0b83fee9",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6f03bd67-78a0-4d72-95b7-77a918727b91",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "221ffdba-5d3d-48cc-bd08-45ccc9366ea6",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "32be54f2",
    "metadata": {},
    "outputs": [],
@@ -92,9 +92,16 @@
     "def goal_check(state, problem, psize):\n",
     "    return np.all(\n",
     "        reduce(np.logical_or, [problem[i] for i in state.taken], np.zeros(psize))\n",
-    "    )\n",
-    "\n",
-    "\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa74d723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# heuristic functions\n",
     "def h1(taken, problem, psize):\n",
     "    # number of spots covered by the union of the sets in state.taken\n",
@@ -102,28 +109,20 @@
     "\n",
     "\n",
     "# successor function\n",
-    "def successor(state, problem, psize):\n",
+    "def successor1(state, problem, psize):\n",
     "    return [\n",
     "        State(state.taken + [i], state.cost + 1, h1(state.taken + [i], problem, psize))\n",
     "        for i in range(psize)\n",
     "        if i not in state.taken\n",
-    "    ]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "923d25bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def hill_climbing(init_state, problem, psize):\n",
+    "    ]\n",
+    "\n",
+    "def hill_climbing_1(init_state, problem, psize):\n",
     "    current = init_state\n",
     "    pb = tqdm()\n",
-    "    fit_calls=0\n",
+    "    fit_calls = 0\n",
     "    while True:\n",
-    "        neighbors = successor(current, problem, psize)\n",
-    "        fit_calls+=len(neighbors)\n",
+    "        neighbors = successor1(current, problem, psize)\n",
+    "        fit_calls += len(neighbors)\n",
     "        next = max(neighbors, key=lambda state: state.heuristic)\n",
     "\n",
     "        pb.update(1)\n",
@@ -132,190 +131,80 @@
     "            or next.heuristic < current.heuristic\n",
     "            or len(current.taken) == psize\n",
     "        ):\n",
-    "            return current,fit_calls\n",
+    "            return current, fit_calls\n",
     "\n",
     "        current = next\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "31ed2a0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sparse_to_dense(sparse_matrix):\n",
-    "    dense_matrix = sparse_matrix.toarray()\n",
-    "    return dense_matrix\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "98e40959",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Problem size:  100 Density:  0.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "7it [00:00, 546.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Solution:  [76, 0, 40, 3, 4, 17]\n",
-      " Solution Lenght:  6\n",
-      " Fitness calls:  679\n",
-      "\n",
-      "Problem size:  100 Density:  0.7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "4it [00:00, 675.68it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Solution:  [57, 7, 2]\n",
-      " Solution Lenght:  3\n",
-      " Fitness calls:  394\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Problem size:  1000 Density:  0.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "11it [00:00, 37.50it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Solution:  [714, 404, 991, 572, 736, 951, 153, 212, 113, 6]\n",
-      " Solution Lenght:  10\n",
-      " Fitness calls:  10945\n",
-      "\n",
-      "Problem size:  1000 Density:  0.7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "5it [00:00, 50.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Solution:  [414, 105, 46, 15]\n",
-      " Solution Lenght:  4\n",
-      " Fitness calls:  4990\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Problem size:  5000 Density:  0.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14it [00:02,  4.82it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Solution:  [1075, 48, 3388, 2040, 803, 3699, 3296, 847, 4699, 3595, 1747, 852, 27]\n",
-      " Solution Lenght:  13\n",
-      " Fitness calls:  69909\n",
-      "\n",
-      "Problem size:  5000 Density:  0.7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "6it [00:01,  5.71it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Solution:  [309, 1976, 4590, 1639, 5]\n",
-      " Solution Lenght:  5\n",
-      " Fitness calls:  29985\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "PROBLEM_SIZE = [100, 1000, 5000]\n",
     "DENSITY = [0.3, 0.7]\n",
     "INITIAL_STATE = State([], 0, 0)\n",
     "\n",
+    "\n",
+    "def sparse_to_dense(sparse_matrix):\n",
+    "    dense_matrix = sparse_matrix.toarray()\n",
+    "    return dense_matrix\n",
+    "\n",
+    "\n",
     "for p in PROBLEM_SIZE:\n",
     "    for d in DENSITY:\n",
     "        problem = sparse_to_dense(make_set_covering_problem(p, p, d))\n",
     "        print(\"\\nProblem size: \", p, \"Density: \", d)\n",
-    "        solution,calls = hill_climbing(INITIAL_STATE, problem, p)\n",
+    "\n",
+    "        solution, calls = hill_climbing_1(INITIAL_STATE, problem, p)\n",
+    "\n",
     "        print(\" Solution: \", solution.taken)\n",
     "        print(\" Solution Lenght: \", solution.cost)\n",
-    "        print(\" Fitness calls: \",calls)\n"
+    "        print(\" Fitness calls: \", calls)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41128936",
+   "metadata": {},
+   "source": [
+    "Problem size: 100 Density: 0.3\n",
+    "7it [00:00, 282.91it/s]\n",
+    "Solution: [76, 0, 40, 3, 4, 17]\n",
+    "Solution Lenght: 6\n",
+    "Fitness calls: 679\n",
+    "\n",
+    "Problem size: 100 Density: 0.7\n",
+    "4it [00:00, 297.12it/s]\n",
+    "Solution: [57, 7, 2]\n",
+    "Solution Lenght: 3\n",
+    "Fitness calls: 394\n",
+    "\n",
+    "Problem size: 1000 Density: 0.3\n",
+    "11it [00:00, 26.89it/s]\n",
+    "Solution: [714, 404, 991, 572, 736, 951, 153, 212, 113, 6]\n",
+    "Solution Lenght: 10\n",
+    "Fitness calls: 10945\n",
+    "\n",
+    "Problem size: 1000 Density: 0.7\n",
+    "5it [00:00, 41.03it/s]\n",
+    "Solution: [414, 105, 46, 15]\n",
+    "Solution Lenght: 4\n",
+    "Fitness calls: 4990\n",
+    "\n",
+    "Problem size: 5000 Density: 0.3\n",
+    "14it [00:03, 4.05it/s]\n",
+    "Solution: [1075, 48, 3388, 2040, 803, 3699, 3296, 847, 4699, 3595, 1747, 852, 27]\n",
+    "Solution Lenght: 13\n",
+    "Fitness calls: 69909\n",
+    "\n",
+    "Problem size: 5000 Density: 0.7\n",
+    "6it [00:01, 4.10it/s]\n",
+    "Solution: [309, 1976, 4590, 1639, 5]\n",
+    "Solution Lenght: 5\n",
+    "Fitness calls: 29985\n"
    ]
   }
  ],
